# unique_unicode_runes

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
unique_unicode_runes/: main.py  test_main.py
